# Zygisk_Device_Spoof

./: .gitignore  1.md  DEVELOPMENT.md  README.md  build.gradle.kts
docs/device_spoof/: ACCEPTANCE_device_spoof.md  ALIGNMENT_device_spoof.md  CONSENSUS_device_spoof.md  DESIGN_device_spoof.md  FINAL_device_spoof.md  TASK_device_spoof.md  TODO_device_spoof.md
docs/project_review/: ACCEPTANCE_project_review.md  ALIGNMENT_project_review.md  CONSENSUS_project_review.md  DESIGN_project_review.md  FINAL_project_review.md  TASK_project_review.md  TODO_project_review.md
module/: build.gradle.kts
module/src/main/cpp/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  HookManager.cpp  HookManager.h  device_spoof.cpp  zygisk.hpp
module/template/: customize.sh  module.prop  service.sh
module/template/config/: README.md  config.json
